[Fix Bug 923499] Added word-wrap property for #profile-details

--- a/media/css/main.less
+++ b/media/css/main.less
@@ -1188,6 +1188,7 @@ body#profile {
             }
             #profile-details {
                 width: 370px;
+                word-wrap: break-word;
                 padding-right: 30px;
                 margin: 0;
                 float: left;
